--- a/Flow/app/src/main/res/values/strings.xml
+++ b/Flow/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="sync_data">정보 받아오는중</string>
     <string name="no_data_title">급식 다 먹음</string>
     <string name="no_data_content">오늘 급식이 더이상 없습니다</string>
-    <string name="wrong_password">재입력한 비밀번호가 맞지 않습니다</string>
+    <string name="wrong_password">재입력한 비밀번호가 다릅니다</string>
     <string name="require_special_char">비밀번호에 특수문자가 무조건 포함되어 있어야 합니다</string>
     <string name="invalid_password">비밀번호 형식에 맞지 않습니다</string>
     <string name="invalid_email">이메일의 형식이 맞지 않습니다</string>
