--- a/Flow/app/src/main/res/values/strings.xml
+++ b/Flow/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="require_special_char">비밀번호에 특수문자가 무조건 포함되어 있어야 합니다</string>
     <string name="invalid_password">비밀번호 형식에 맞지 않습니다</string>
     <string name="invalid_email">이메일의 형식이 맞지 않습니다</string>
+    <string name="see_meal">급식 보러 가기</string>
+    <string name="apply_out_sleep">외박 신청하기</string>
+    <string name="apply_out_go">외출 신청하기</string>
+    <string name="check_out">외출/외박 신청 확인하기</string>
+    <string name="logout">로그아웃</string>
+    <string name="check_notice">공지 확인하기</string>
+    <string name="error">오류입니다</string>
 </resources>
